update all Api types
